fixed panel stuck at top of pagew

--- a/dryrun-ui/default.css
+++ b/dryrun-ui/default.css
@@ -19,12 +19,12 @@ html, body {
 }
 
 #panel {
-  position: absolute;
+  position: relative;
   top: 5px;
   left: 50%;
   margin-left: -180px;
   z-index: 5;
   background-color: #fff;
   padding: 5px;
-  border: 1px solid #999;
+  border: 0px solid #999;
 }
